# oop_lab3

./: CMakeLists.txt
src/: CPolynom2.cpp  CPolynom2.h  main.cpp  prog
tests/: tests.cpp
zvit/: Kabachok_3_oop.docx
